<resources>
    <string name="app_name">Final_Test_01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newestProduct">جدیدترین محصولات</string>
    <string name="mostVisitedProduct">پربازدید ترین محصولات</string>
    <string name="bestProducts">بهترین محصولات</string>
    <string name="tomanFee">قیمت به تومان</string>
    <string name="nameProduct">اسم محصولات</string>
    <string name="nameProducts">محل نمایش نام محصول</string>
    <string name="feeProducts">محل نمایش قیمت محصول</string>
    <string name="descriptionProducts">محل نمایش توضیحات محصول</string>
    <string name="tvCategory">TV Category</string>
    <string name="categories">دسته بندی ها</string>
    <string name="categoryNames">دسته بندی</string>
    <string name="profile">پروفایل</string>
    <string name="numberOfProduct">تعداد</string>
    <string name="productNameInCart">نام محصول در سبد خرید</string>
    <string name="finalPriceProduct">جمع نهایی محصول</string>
    <string name="delete">حذف</string>
    <string name="finalAllPrice">جمع کل خرید</string>
    <string name="finalAllPrice_fee">000/000/000 تومان</string>
    <string name="complete">تکمیل خرید</string>
    <string name="signup">ثبت نام</string>
    <string name="email">ایمیل خود را وارد کنید</string>
    <string name="family">نام خانوادگی خود را وارد کنید</string>
    <string name="name">نام خود را وارد کنید</string>
    <string name="addProductToCart">اضافه کردن</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="input_is_wrong">مقدار وارد شده صحیح نیست</string>
    <string name="start">شروع</string>
    <string name="stop">توقف</string>
    <string name="hour">ساعت</string>
    <string name="apply">تایید</string>
    <string name="notification_setting">تنظیمات نوتفیکیشن</string>
    <string name="hour_3">3 ساعت</string>
    <string name="hour_5">5 ساعت</string>
    <string name="hour_8">8 ساعت</string>
    <string name="hour_12">12 ساعت</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="enter_description">نظر خود را بنویسید</string>
    <string name="submitReview">ثبت نظر</string>
    <string name="date">Date</string>
    <string name="reviewer">reviewer</string>
    <string name="status">status</string>
</resources>