<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="16sp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_review_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ir_mitra"
                    android:paddingEnd="8dp"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textDirection="rtl"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvReview_reviewer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvReview_reviewer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ir_mitra"
                    android:paddingEnd="8dp"
                    android:text="@string/reviewer"
                    android:textDirection="rtl"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvReview_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_review_status"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvReview_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/ir_mitra"
                    android:gravity="center|bottom"
                    android:paddingEnd="8dp"
                    android:text="@string/date"
                    android:textDirection="rtl"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tvDelete_review"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvDelete_review"
                    style="@style/circleImage20"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/red"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvReview_reviewer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

