<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_azure">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_gallery5"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layoutDirection="ltr"
            tools:listitem="@layout/detail_items_adapter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_title_dialog5"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/nameProducts"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/iransans_bold"
            app:layout_constraintEnd_toEndOf="@+id/recyclerView_gallery5"
            app:layout_constraintStart_toStartOf="@+id/recyclerView_gallery5"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_gallery5" />

        <RatingBar
            android:id="@+id/rating_bar5"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:numStars="5"
            android:layoutDirection="rtl"
            app:layout_constraintBottom_toTopOf="@+id/tv_price_dialog5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog5" />

        <TextView
            android:id="@+id/tv_price_dialog5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeProducts"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/tv_price_bg_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title_dialog5"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog5" />

        <TextView
            android:id="@+id/tv_description_dialog5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/descriptionProducts"
            android:textSize="18sp"
            android:fontFamily="@font/iransans_light"
            app:layout_constraintEnd_toEndOf="@+id/tv_price_dialog5"
            app:layout_constraintStart_toStartOf="@+id/tv_price_dialog5"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_dialog5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>