<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.final_test_01.ui.detail.review.ReviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        tools:context=".ui.detail.review.ReviewFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_review"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:fontFamily="@font/ir_mitra_bold"
                android:gravity="center_vertical|start|top"
                android:hint="@string/name"
                android:inputType="text"
                android:layoutDirection="rtl"
                android:paddingStart="8dp"
                android:text="@={viewModel.reviewer1}"
                android:textColorHint="@color/light_azure"
                android:textDirection="rtl"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:fontFamily="@font/ir_mitra_bold"
                android:gravity="center_vertical|start|top"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layoutDirection="rtl"
                android:paddingStart="8dp"
                android:text="@={viewModel.reviewEmail1}"
                android:textColorHint="@color/light_azure"
                android:textDirection="rtl"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName_review"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription_review"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="6dp"
                android:fontFamily="@font/ir_mitra_bold"
                android:gravity="center_vertical|start|top"
                android:hint="@string/enter_description"
                android:inputType="text"
                android:layoutDirection="rtl"
                android:paddingStart="8dp"
                android:text="@={viewModel.review1}"
                android:textColorHint="@color/light_azure"
                android:textDirection="rtl"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail_review"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submitReview"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_azure"
                android:fontFamily="@font/ir_mitra_bold"
                android:text="@string/submitReview"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/animationView_review"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:visibility="invisible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/ottiechargement"
                            tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>