<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_azure"
        tools:context=".ui.cart.CartFragment">

        <LinearLayout
            android:id="@+id/linearLayout_cart"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/tv_price_bg_category"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_cart_price_fee"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:fontFamily="@font/iransans_bold"
                android:gravity="end|center_vertical"
                android:paddingStart="16dp"
                android:text="@string/finalAllPrice_fee"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView_cart"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_cart_price"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:paddingEnd="16dp"
                android:fontFamily="@font/iransans_bold"
                android:gravity="start|center_vertical"
                android:text="@string/finalAllPrice"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView_cart"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_cart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:spanCount="1"
            tools:itemCount="1"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btn_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_cart"
            tools:listitem="@layout/cart_item_adapter" />

        <Button
            android:id="@+id/btn_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:backgroundTint="@color/dark_indigo"
            android:textColor="@color/light_azure"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView_cart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/ottiechargement"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>